MXB - fixed gap between heading and content

--- a/assets/scss/layouts/_layouts.site.scss
+++ b/assets/scss/layouts/_layouts.site.scss
@@ -43,27 +43,38 @@ BEM ELEMENTS .l-site__
     @extend .c-site-wrapper--responsive;
     padding-top: 0;
     padding-bottom: 0;
-    @include mq($from : tablet){
+    @include mq($from : tablet, $until : desktop){
       padding-top: 148px;
+    }
+    @include mq($from : desktop){
+      padding-top: 140px;
     }
   }
   &main-after{
     background: $brand-col-2;
   }
   &main{
-    padding-top: 113px;
-    //background: $brand-col-2;
+    padding-top: 137px;
+    @include mq($from: tablet){
+      padding-top: 160px;
+    }
+    @include mq($from: desktop){
+      padding-top: 113px;
+    }
+
+    background: $brand-col-2;
     body.admin-bar &{
-      padding-top: 90px;
+      padding-top: 114px;
     }
     body.error404 &{
       padding-top: $act-unit-l;
     }
 
     @include mq($from: desktop){
-      padding-top: 148px;
+      //padding-top: 148px;
+      padding-top: 166px;
       body.admin-bar &{
-        padding-top: 116px;
+        padding-top: 134px;
       }
       body.error404 &{
         padding-top: $act-unit-h * 2;
